; ModuleID = '/home/carl/AnghaBench/libgit2/tests/filter/extr_custom_helpers.c_reverse_filter_apply.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/filter/extr_custom_helpers.c_reverse_filter_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }

@.str = private unnamed_addr constant [5 x i8] c"hero\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reverse_filter_apply(i8** %0, i8** %1, %struct.TYPE_5__* %2, %struct.TYPE_5__* %3, i8** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca %struct.TYPE_5__*, align 8
  %11 = alloca i8**, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i8** %0, i8*** %7, align 8
  store i8** %1, i8*** %8, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %9, align 8
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %10, align 8
  store i8** %4, i8*** %11, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %12, align 8
  %19 = load i8*, i8** %12, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %19, i64 %23
  store i8* %24, i8** %13, align 8
  %25 = load i8**, i8*** %7, align 8
  %26 = call i32 @GIT_UNUSED(i8** %25)
  %27 = load i8**, i8*** %8, align 8
  %28 = call i32 @GIT_UNUSED(i8** %27)
  %29 = load i8**, i8*** %11, align 8
  %30 = call i32 @GIT_UNUSED(i8** %29)
  %31 = load i8**, i8*** %11, align 8
  %32 = call i32 @git_filter_source_path(i8** %31)
  %33 = call i32 @git__strncmp(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %32, i32 4)
  %34 = call i32 @cl_assert_equal_i(i32 0, i32 %33)
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %73

40:                                               ; preds = %5
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @git_buf_grow(%struct.TYPE_5__* %41, i32 %44)
  %46 = call i32 @cl_git_pass(i32 %45)
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 1
  %49 = load i64, i64* %48, align 8
  %50 = inttoptr i64 %49 to i8*
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %52 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i8, i8* %50, i64 %54
  %56 = getelementptr inbounds i8, i8* %55, i64 -1
  store i8* %56, i8** %14, align 8
  br label %57

57:                                               ; preds = %61, %40
  %58 = load i8*, i8** %12, align 8
  %59 = load i8*, i8** %13, align 8
  %60 = icmp ult i8* %58, %59
  br i1 %60, label %61, label %67

61:                                               ; preds = %57
  %62 = load i8*, i8** %12, align 8
  %63 = getelementptr inbounds i8, i8* %62, i32 1
  store i8* %63, i8** %12, align 8
  %64 = load i8, i8* %62, align 1
  %65 = load i8*, i8** %14, align 8
  %66 = getelementptr inbounds i8, i8* %65, i32 -1
  store i8* %66, i8** %14, align 8
  store i8 %64, i8* %65, align 1
  br label %57

67:                                               ; preds = %57
  %68 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %69 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 8
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %72 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %71, i32 0, i32 0
  store i32 %70, i32* %72, align 8
  store i32 0, i32* %6, align 4
  br label %73

73:                                               ; preds = %67, %39
  %74 = load i32, i32* %6, align 4
  ret i32 %74
}

declare dso_local i32 @GIT_UNUSED(i8**) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git__strncmp(i8*, i32, i32) #1

declare dso_local i32 @git_filter_source_path(i8**) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_buf_grow(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
